--- a/projects/flask-project/flyskys/templates/base.html
+++ b/projects/flask-project/flyskys/templates/base.html
@@ -1,3 +1,4 @@
+<!-- 모든 template 파일에 공통으로 적용 되는 내용 -->
 <!DOCTYPE html>
 <html lang="ko">
   <head>
@@ -20,8 +21,14 @@
     <title>Hello, flyskys!</title>
   </head>
   <body>
-    <!-- 기본 템플릿 안에 삽입될 내용 Start -->
+    <!-- 네비게이션바 -->
+    {% include "navbar.html" %}
+    <!-- base 템플릿 안에 삽입될 내용 Start -->
     {% block content %} {% endblock %}
-    <!-- 기본 템플릿 안에 삽입될 내용 End -->
+    <!-- base 템플릿 안에 삽입될 내용 End -->
+    <!-- jQuery JS -->
+    <script src="{{ url_for('static', filename='jquery-3.5.1.min.js') }}"></script>
+    <!-- Bootstrap JS -->
+    <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
   </body>
 </html>
