--- a/projects/flask-project/flyskys/templates/question/question_list.html
+++ b/projects/flask-project/flyskys/templates/question/question_list.html
@@ -9,7 +9,7 @@
       </tr>
     </thead>
     <tbody>
-      {% if question_list %} {% for question in question_list %}
+      {% if question_list %} {% for question in question_list.items %}
       <tr>
         <td>{{ loop.index }}</td>
         <td>
@@ -17,7 +17,7 @@
             >{{ question.subject }}</a
           >
         </td>
-        <td>{{ question.create_date }}</td>
+        <td>{{ question.create_date | datetime }}</td>
       </tr>
       {% endfor %} {% else %}
       <tr>
@@ -26,6 +26,47 @@
       {% endif %}
     </tbody>
   </table>
+  <!-- Paging Start -->
+  <ul class="pagination justify-content-center">
+    <!-- 이전 btn -->
+    {% if question_list.has_prev %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ question_list.prev_num }}">이전</a>
+    </li>
+    {% else %}
+    <li class="page-item disabled">
+      <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+    </li>
+    {% endif %}
+
+    <!-- paging -->
+    {% for page_num in question_list.iter_pages() %} {% if page_num %} {% if
+    page_num != question_list.page %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+    </li>
+    {% else %}
+    <li class="page-item active" aria-current="page">
+      <a class="page-link" href="#">{{ page_num }}</a>
+    </li>
+    {% endif %} {% else %}
+    <li class="disabled">
+      <a class="page-link" href="#">...</a>
+    </li>
+    {% endif %} {% endfor %}
+
+    <!-- 다음 btn -->
+    {% if question_list.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ question_list.next_num }}">다음</a>
+    </li>
+    {% else %}
+    <li class="page-item disabled">
+      <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+    </li>
+    {% endif %}
+  </ul>
+  <!-- Paging End -->
   <a href="{{ url_for('question.create') }}" class="btn btn-primary"
     >질문 등록하기</a
   >
