--- a/projects/flask-project/flyskys/templates/question/question_form.html
+++ b/projects/flask-project/flyskys/templates/question/question_form.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container">
   <h5 class="my-3 border-bottom pb-2">질문등록</h5>
+  <!-- POST 사용 (질문 최종 등록) -->
   <form method="post" class="post-form my-3">
     {{ form.csrf_token }}
     <!-- 오류표시 Start -->
