add user info to question and answer & add decorator function to block replying without login

--- a/projects/flask-project/flyskys/templates/question/question_detail.html
+++ b/projects/flask-project/flyskys/templates/question/question_detail.html
@@ -47,6 +47,13 @@
     <!-- 오류표시 End -->
     <div class="form-group">
       <textarea
+        {%
+        if
+        not
+        g.user
+        %}disabled{%
+        endif
+        %}
         name="content"
         id="content"
         class="form-control"
