--- a/projects/flask-project/flyskys/templates/question/question_detail.html
+++ b/projects/flask-project/flyskys/templates/question/question_detail.html
@@ -56,6 +56,7 @@
             {% if question.comment_set|length > 0 %}
             <div class="mt-3">
               {% for comment in question.comment_set %}
+              <a name="comment_{{ comment.id }}"></a>
               <div class="comment py-2 text-muted">
                 <span style="white-space: pre-line">{{ comment.content }}</span>
                 <span>
@@ -96,6 +97,7 @@
       {{ question.answer_set|length }}개의 답변이 있습니다.
     </h5>
     {% for answer in question.answer_set %}
+    <a name="answer_{{ answer.id }}"></a>
     <div class="row my-3">
       <div class="col-1">
         <div class="bg-light text-center p-3 border font-weight-bolder mb-1">
@@ -146,6 +148,7 @@
             {% if answer.comment_set|length > 0 %}
             <div class="mt-3">
               {% for comment in answer.comment_set %}
+              <a name="comment_{{ comment.id }}"></a>
               <div class="comment py-2 text-muted">
                 <span style="white-space: pre-line">{{ comment.content }}</span>
                 <span>
